--- a/2020-1/apunte/main.tex
+++ b/2020-1/apunte/main.tex
@@ -198,7 +198,7 @@
 \newcommand{\principio}[1]{\vskip .3 cm \centerline{\sc #1} \vskip .3cm}
 \makeindex
 
-
+%\begin{comment}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% CONTROLADORES DE ESTILO %%%
 %%%--------------------------------------------------------------------------
@@ -248,7 +248,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%													%%%%%%%%%%%%%%%
-
+%\end{comment}
 
 
 
@@ -270,7 +270,7 @@
 
 \pagenumbering{roman}
 
-\title{Matemática Discreta I \\ FAMAF  - UNC \\ Marzo 2020 }
+\title{Matemática Discreta I \\ FAMAF  - UNC \\ Septiembre 2020 }
 
 \maketitle
 
